--- a/index.css
+++ b/index.css
@@ -1,4 +1,31 @@
 html, body {
     margin: 0;
     padding: 0;
+    
+    font-family: 'Rubik', sans-serif;
+    background-color: #EEF0F4;
+    height: 100%;
+    width: 100%;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+input {
+    border: none;
+    color: #432000;
+    background-color: #DCE1EB
+    
+}
+
+button {
+    border: none;
+    color: #FDFDFD;
+    background-color: #AC485A;
+    
 }
