--- a/index.css
+++ b/index.css
@@ -1,31 +1,61 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    
-    font-family: 'Rubik', sans-serif;
-    background-color: #EEF0F4;
-    height: 100%;
-    width: 100%;
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+
+  font-family: "Rubik", sans-serif;
+  background-color: #eef0f4;
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 500px;
+  width: 425px;
+  background-color: white;
+  border: black solid 5px;
+  border-radius: 10px;
+  padding: 50px;
+}
+
+img {
+  width: 200px;
+  margin-bottom: 20px;
 }
 
 input {
-    border: none;
-    color: #432000;
-    background-color: #DCE1EB
-    
+  border: none;
+  color: #432000;
+  background-color: #dce1eb;
+  height: 55px;
+  border-radius: 8px;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 20px;
+  font-size: 20px;
 }
 
 button {
-    border: none;
-    color: #FDFDFD;
-    background-color: #AC485A;
-    
+  border: none;
+  color: #fdfdfd;
+  background-color: #ac485a;
+  height: 55px;
+  width: 100%;
+  text-align: center;
+  border-radius: 8px;
+  font-size: 20px;
 }
