--- a/index.css
+++ b/index.css
@@ -40,3 +40,22 @@ button {
   text-align: center;
   font-family: 'Rubik', sans-serif;
 }
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  background-color: #FFFDF8;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 15px;
+  flex-grow: 1;
+  text-align: center;
+  font-size: 17px;
+}
+
