--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ html, body {
   font-family: 'Rubik', sans-serif;
   background-color: #EEF0F4;
   height: 100%;
+  user-select: none;
 }
 
 .container {
