--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ html, body {
   background-color: #A6B1E1;
   font-family: "Poppins", sans-serif;
   padding: 20px 10px;
+  overflow-y: hidden;
 }
 
 .container {
